   * added restart command to server that does gracefull restart
   * added option to do gracefull shut down for server
   * fixed multiplayer_connect to handle leave_game command from server
   * improved reloading of game configs after installing or removing addons
   * fixed threading bug in upload_logs
   * dissallow_observers is forced on if side has controller=null
   * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
     network play
   * added some includes to fix compilation problems with Sun Studio 12
     (patch #1066)
   * Fixed unstoned units not having their attacks at their first turn

Version 1.5.0:
 * campaigns:
   * synchronize all campaign ids with their directory name
   * greatly updated the scenario music playlists in The Rise of Wesnoth,
     Descent into Darkness and The South Guard
   * The Hammer of Thursagan:
     * instead of leadership, the dwarvish loremaster unit line now has a
       similar but unique inspire ability
   * Under the Burning Suns:
     * Minor cosmetic fixes
   * Northern Rebirth:
     * Major WML cleanup and optimisation
     * New respawn mechanism for white mages
   * Liberty:
     * Fix graphic artifact bug #11438
 * Formula AI:
   * added support for Formula AI language, more info available at:
     http://www.wesnoth.org/wiki/FormulaAI
 * graphics:
   * Fixed broken TC on transport-galleon and drake walking corpse graphics
   * New portraits: Elvish Sorceress
   * added a light shadow on the bar of the loading screen
   * new dungeon wall terrain
   * new city-themed village variation
   * new progressive parameter for animations: submerge
   * new progressive parameter for animations: x and y
   * image_diagonal now also works with normal [frame]
   * sub-frames now obey terrain height
   * selecting a poisoned unit now does the selection anim properly
   * convert the render engine to a z-ordered based engine, this allows to 