@@ -42,6 +42,7 @@ Version 1.5.0+svn:
    * improved reloading of game configs after installing or removing addons
    * fixed threading bug in upload_logs
    * dissallow_observers is forced on if side has controller=null
+   * Fixed null-pointer reference in network code
    * Removed bug introduced in 1.5.0 that allowed use of :debug commands during
      network play
    * added some includes to fix compilation problems with Sun Studio 12
